--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <title>My DS Exam</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"
+    />
+
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
@@ -21,6 +26,32 @@
       </p>
     <![endif]-->
 
-    <script src="js/script.js" async defer></script>
+    <nav class="container-fluid nav">
+      <div class="container cf">
+        <div class="brand">
+          <a href="#"><img src="assets/crazydemo-logo.png"/></a>
+        </div>
+        <i class="fa fa-bars nav-toggle"></i>
+        <ul>
+          <li>
+            <a href="#call" class="sm-link"
+              ><i class="fa fa-phone "></i>+1234 5657</a
+            >
+          </li>
+          <li>
+            <a href="#email" class="sm-link"
+              ><i class="fa fa-envelope-o"></i>mail@crazydomains.com</a
+            >
+          </li>
+          <li>
+            <div class="btn book-now ">
+              <i class="fa fa-paper-plane-o"></i> Book now
+            </div>
+          </li>
+        </ul>
+      </div>
+    </nav>
+
+    <script src="js/script.js"></script>
   </body>
 </html>
