slider and slider images

--- a/index.html
+++ b/index.html
@@ -15,7 +15,14 @@
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"
     />
-
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css"
+    />
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
@@ -51,7 +58,52 @@
         </ul>
       </div>
     </nav>
-
+    <div class="slider1">
+      <div class="slide">
+        <img src="assets/slider/Image 1.png" />
+        <div class="slider-text">
+          <h2>Let's Make Your <br />Best Trip Ever 1</h2>
+          <p>
+            We are committed to offering travel services of the highest quality,
+            combining our energy and enthusiasm, with our years of experience.
+          </p>
+          <div class="btn book-tour btn--width">
+            <i class="fa fa-paper-plane-o"></i> BOOK TOUR 1
+          </div>
+        </div>
+      </div>
+      <div class="slide">
+        <img src="assets/slider/Image 21.png" />
+        <div class="slider-text">
+          <h2>Let's Make Your <br />Best Trip Ever 2</h2>
+          <p>
+            We are committed to offering travel services of the highest quality,
+            combining our energy and enthusiasm, with our years of experience.
+          </p>
+          <div class="btn book-tour btn--width">
+            <i class="fa fa-paper-plane-o"></i> BOOK TOUR 2
+          </div>
+        </div>
+      </div>
+      <div class="slide">
+        <img src="assets/slider/Image 31.png" />
+        <div class="slider-text">
+          <h2>Let's Make Your <br />Best Trip Ever 3</h2>
+          <p>
+            We are committed to offering travel services of the highest quality,
+            combining our energy and enthusiasm, with our years of experience.
+          </p>
+          <div class="btn book-tour btn--width">
+            <i class="fa fa-paper-plane-o"></i> BOOK TOUR 3
+          </div>
+        </div>
+      </div>
+    </div>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"
+      type="text/javascript"
+    ></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.js"></script>
     <script src="js/script.js"></script>
   </body>
 </html>
