--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           </li>
           <li>
             <div class="btn book-now ">
-              <i class="fa fa-paper-plane-o"></i> Book now
+              <i class="fa fa-paper-plane-o"></i> BOOK NOW
             </div>
           </li>
         </ul>
@@ -99,6 +99,150 @@
         </div>
       </div>
     </div>
+
+    <div class="container-fluid featured">
+      <div class="container cf">
+        <h2>Featured Tours</h2>
+        <p>
+          Explore the world with Intense! We offer you a vast vatriety of tours
+          of all types featuring both exotic and already well-known
+          destinations, some of which are listed below.
+        </p>
+        <div>
+          <div class="col-4">
+            <img src="assets/img/Image 2.png" alt="" />
+            <h3>Kamalame Cay Resort</h3>
+            <p>
+              Kamalame Cay, The Bahamas
+            </p>
+          </div>
+          <div class="col-4">
+            <img src="assets/img/Image 3.png" alt="" />
+            <h3>Kamalame Cay Resort</h3>
+            <p>
+              Kamalame Cay, The Bahamas
+            </p>
+          </div>
+          <div class="col-4">
+            <img src="assets/img/Image 4.png" alt="" />
+            <h3>Kamalame Cay Resort</h3>
+            <p>
+              Kamalame Cay, The Bahamas
+            </p>
+          </div>
+          <div class="col-4">
+            <img src="assets/img/Image 5.png" alt="" />
+            <h3>Kamalame Cay Resort</h3>
+            <p>
+              Kamalame Cay, The Bahamas
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="container-fluid best-tours">
+      <div class="container ">
+        <h2>We Provide Only the Best Tours</h2>
+        <p>
+          With more than 230 trips to worldwide destinations, including Europe,
+          North & Central, South America, Asia, Australia & New Zealand, we
+          continue to offer new ways and the best tours for traveling every
+          year.
+        </p>
+        <a class="btn get-in-touch btn--width" id="btn-touch"
+          ><i class="fa fa-paper-plane-o"></i> GET IN TOUCH</a
+        >
+      </div>
+    </div>
+
+    <div class="container-fluid why-us">
+      <div class="container cf">
+        <h2>Why Us?</h2>
+        <div class="col-3">
+          <img src="assets/icon/icon-best-service.png" alt="the-best-service" />
+          <h3>The Best Service</h3>
+          <p>
+            Our aim is to provide you with the tour service of the top quality,
+            and we'll do our best to find the suitable tour for you.
+          </p>
+        </div>
+        <div class="col-3">
+          <img
+            src="assets/icon/icon-everything-inc.png"
+            alt="everything-ist-included"
+          />
+          <h3>Everything ist included</h3>
+          <p>
+            There are dozens of aspects to pay attention to, while organizing a
+            trip, and we’ll make sure your tour includes everything you need.
+          </p>
+        </div>
+        <div class="col-3">
+          <img src="assets/icon/icon-great-prices.png" alt="great-prices" />
+          <h3>Great Prices</h3>
+          <p>
+            All our tours and excursions are available at really affordable
+            prices so you can always pick a great destination.
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <div class="container-fluid our-partners" id="">
+      <div class="container cf">
+        <h2>Our Partners</h2>
+        <section class="customer-logos slider">
+          <div class="slide">
+            <img src="assets/icon/client-01-144x63.png" />
+          </div>
+          <div class="slide">
+            <img src="assets/icon/client-02-144x63.png" />
+          </div>
+          <div class="slide">
+            <img src="assets/icon/client-03-144x63.png" />
+          </div>
+          <div class="slide">
+            <img src="assets/icon/client-04-144x63.png" />
+          </div>
+          <div class="slide">
+            <img src="assets/icon/client-05-144x63.png" />
+          </div>
+          <div class="slide">
+            <img src="assets/icon/client-06-144x63.png" />
+          </div>
+        </section>
+      </div>
+    </div>
+
+    <div class="container-fluid testimonial" id="">
+      <div class="container cf">
+        <h2>What Our Client Say</h2>
+      </div>
+    </div>
+
+    <footer class="container-fluid footer">
+      <div class="brand">
+        <a href="#"><img src="assets/crazydemo-logo.png"/></a>
+      </div>
+      <div class="container">
+        <a href="#" target="_blank" class="social-icon fa fa-facebook"></a>
+        <a href="#" target="_blank" class="social-icon fa fa-twitter"></a>
+        <a href="#" target="_blank" class="social-icon fa fa-google-plus"></a>
+        <a href="#" target="_blank" class="social-icon fa fa-linkedin"></a>
+      </div>
+    </footer>
+
+    <div id="my-modal" class="modal">
+      <div class="modal-content">
+        <div class="modal-header">
+          <span class="close">&times;</span>
+          <h2>Contact Us</h2>
+        </div>
+        <div class="modal-body contact"></div>
+      </div>
+    </div>
+
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"
       type="text/javascript"
