--- a/index.html
+++ b/index.html
@@ -239,7 +239,30 @@
           <span class="close">&times;</span>
           <h2>Contact Us</h2>
         </div>
-        <div class="modal-body contact"></div>
+        <div class="modal-body ">
+          <form action="">
+            <div class="form-group input-group">
+              <span class="input-group-addon"><img src="assets/icon/icon-user.png" class="name"></i></span>
+              <input class="form-control" type="text" name="name" placeholder="Name" 
+              />
+            </div>
+            <div class="form-group input-group">
+                <span class="input-group-addon "><img src="assets/icon/icon-phone.png" class="phone"></i></span>
+                <input class="form-control" type="tel" name="phone" placeholder="Phone" />
+            </div>
+            <div class="form-group input-group">
+                <span class="input-group-addon"><img src="assets/icon/icon-email.png" class="email"></i></span>
+                <input class="form-control" type="email" name="email" placeholder="Email"  />
+            </div>
+            <div class="form-group input-group">
+                <span class="input-group-addon msg--span"><img src="assets/icon/icon-msg.png" class="msg"></i></span>
+                <textarea placeholder="Message" name="message"></textarea>
+            </div>
+            <div class="btn send-msg btn--width">
+                <i class="fa fa-paper-plane-o"></i> SEND MESSAGE
+            </div>
+          </form>
+        </div>
       </div>
     </div>
 
